--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,6 +39,50 @@ address {
   font-style: normal;
 }
 
+.facebook:hover svg {
+  fill: #3b5998;
+}
+
+.twitter:hover svg {
+  fill: #55acee;
+}
+
+.mix:hover svg {
+  fill: #fd8235;
+}
+
+.instagram:hover svg {
+  fill: #405de6;
+}
+
+.vimeo:hover svg {
+  fill: #1ab7ea;
+}
+
+.pinterest:hover svg {
+  fill: #bd081c;
+}
+
+.youtube:hover svg {
+  fill: #cd201f;
+}
+
+.linkedin:hover svg {
+  fill: #007bb6;
+}
+
+.buffer:hover svg {
+  fill: #333333;
+}
+
+.whatsapp:hover svg {
+  fill: #25D366;
+}
+
+.pocket:hover svg {
+  fill: #ED4255;
+}
+
 ::-moz-selection {
   background: var(--color);
   color: var(--white);
@@ -73,6 +117,7 @@ html {
   font-size: clamp(1rem,
     1rem + 0.2 * ((100vw - 20rem) / 86),
     1.2rem);
+  font-smooth: always;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
@@ -85,7 +130,7 @@ body {
   background: var(--page-bg);
   color: var(--text-color);
   font-family: var(--font-body);
-  font-variation-settings: "wght" var(--font-weight-normal);
+  font-weight: var(--font-weight-normal);
   line-height: var(--line-height);
   padding: 0;
   -ms-scroll-chaining: none;
@@ -159,7 +204,7 @@ h5,
 h6 {
   color: var(--headings-color);
   font-family: var(--font-heading);
-  font-variation-settings: "wght" var(--headings-weight);
+  font-weight: var(--headings-weight);
   letter-spacing: var(--letter-spacing);
   line-height: 1.2;
   margin-top: 2.75rem;
@@ -219,7 +264,7 @@ h6 + * {
 
 b,
 strong {
-  font-variation-settings: "wght" var(--font-weight-bold);
+  font-weight: var(--font-weight-bold);
 }
 
 blockquote {
@@ -264,7 +309,7 @@ ol ol {
 }
 
 dl dt {
-  font-variation-settings: "wght" var(--font-weight-bold);
+  font-weight: var(--font-weight-bold);
 }
 
 code {
@@ -303,7 +348,7 @@ table {
   width: 100%;
 }
 table th {
-  font-variation-settings: "wght" var(--font-weight-bold);
+  font-weight: var(--font-weight-bold);
   padding: 0.625rem 1rem;
 }
 table td {
@@ -315,7 +360,7 @@ table td {
 figcaption {
   color: var(--gray);
   font-family: var(--font-body);
-  font-variation-settings: "wght" var(--font-weight-normal);
+  font-weight: var(--font-weight-normal);
   font-size: 0.7901234568rem;
   margin-top: 1rem;
   text-align: right;
@@ -353,7 +398,7 @@ hr::before,
   content: "***";
   color: var(--dark);
   font-size: 1.265625rem;
-  font-variation-settings: "wght" var(--font-weight-bold);
+  font-weight: var(--font-weight-bold);
   letter-spacing: 1.265625rem;
   padding-left: 1.265625rem;
 }
@@ -362,7 +407,7 @@ hr::before,
   content: "*";
   color: var(--dark);
   font-size: 1.265625rem;
-  font-variation-settings: "wght" var(--font-weight-bold);
+  font-weight: var(--font-weight-bold);
   letter-spacing: 1.265625rem;
   padding-left: 1.265625rem;
 }
@@ -401,8 +446,8 @@ button {
 }
 @media all and (min-width: 20em) {
   .btn, [type=button],
-  [type=submit],
-  button {
+[type=submit],
+button {
     width: auto;
   }
 }
@@ -437,18 +482,18 @@ button:disabled {
 }
 @media all and (max-width: 19.9375em) {
   .btn + .btn, [type=button] + .btn,
-  [type=submit] + .btn,
-  button + .btn, .btn + [type=button], [type=button] + [type=button],
-  [type=submit] + [type=button],
-  button + [type=button],
-  .btn + [type=submit],
-  [type=button] + [type=submit],
-  [type=submit] + [type=submit],
-  button + [type=submit],
-  .btn + button,
-  [type=button] + button,
-  [type=submit] + button,
-  button + button {
+[type=submit] + .btn,
+button + .btn, .btn + [type=button], [type=button] + [type=button],
+[type=submit] + [type=button],
+button + [type=button],
+.btn + [type=submit],
+[type=button] + [type=submit],
+[type=submit] + [type=submit],
+button + [type=submit],
+.btn + button,
+[type=button] + button,
+[type=submit] + button,
+button + button {
     margin-top: 0.5rem;
   }
 }
@@ -492,16 +537,16 @@ fieldset > legend {
 }
 
 legend {
-  font-variation-settings: "wght" var(--headings-weight);
+  font-weight: var(--headings-weight);
 }
 
 label {
-  font-variation-settings: "wght" var(--headings-weight);
+  font-weight: var(--headings-weight);
   margin: 0 1rem 0.75rem 0;
 }
 
 option {
-  font-variation-settings: "wght" var(--font-weight-normal);
+  font-weight: var(--font-weight-normal);
 }
 
 [type=text],
@@ -528,13 +573,13 @@ select {
 }
 @media all and (min-width: 37.5em) {
   [type=text],
-  [type=url],
-  [type=tel],
-  [type=number],
-  [type=email],
-  [type=search],
-  textarea,
-  select {
+[type=url],
+[type=tel],
+[type=number],
+[type=email],
+[type=search],
+textarea,
+select {
     width: auto;
   }
 }
@@ -558,7 +603,7 @@ input[type=radio] {
 input[type=checkbox] + label,
 input[type=radio] + label {
   display: block;
-  font-variation-settings: "wght" var(--font-weight-normal);
+  font-weight: var(--font-weight-normal);
   position: relative;
   margin-left: -1px;
   cursor: pointer;
@@ -649,18 +694,26 @@ textarea {
 }
 
 .header {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 5;
   grid-column: 2/7;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding: var(--magic-number) 0;
   position: relative;
 }
 
 .logo {
-  order: 1;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
   color: var(--headings-color) !important;
   font-family: var(--font-logo);
-  font-variation-settings: "wght" var(--font-weight-bold);
+  font-weight: var(--font-weight-bold);
   letter-spacing: var(--letter-spacing);
   line-height: 1;
   margin-right: auto;
@@ -675,16 +728,16 @@ textarea {
   }
 }
 .logo > img {
-  height: 3rem;
-  -o-object-fit: contain;
-     object-fit: contain;
+  max-height: 3rem;
   width: auto;
 }
 
 .social {
   margin-left: auto;
   margin-right: -0.5rem;
-  order: 3;
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
 }
 @media all and (max-width: 56.1875em) {
   .social {
@@ -712,13 +765,17 @@ textarea {
 
 .search {
   margin-right: 1.25rem;
-  order: 2;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
   text-align: right;
 }
 @media all and (min-width: 56.25em) {
   .search {
     margin: 0 0 0 1.25rem;
-    order: 3;
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
   }
 }
 .search__input {
@@ -779,21 +836,33 @@ textarea {
   visibility: visible;
 }
 .search__form {
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .navbar {
-  order: 3;
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
   position: relative;
 }
 @media all and (min-width: 56.25em) {
   .navbar {
-    order: 2;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
   }
 }
 .navbar .navbar__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   list-style: none;
   margin: 0;
@@ -808,7 +877,7 @@ textarea {
   display: block;
   font-size: 1rem;
   font-family: var(--font-menu);
-  font-variation-settings: "wght" var(--font-weight-bold);
+  font-weight: var(--font-weight-bold);
   line-height: var(--line-height);
   padding: 0;
   position: relative;
@@ -833,6 +902,16 @@ textarea {
   cursor: default;
   display: block;
   padding: 0 0.5rem;
+}
+@media all and (min-width: 56.25em) and (max-width: 74.9375em) {
+  .navbar .navbar__menu > li {
+    margin-right: 0;
+  }
+}
+@media all and (min-width: 75em) {
+  .navbar .navbar__menu > li {
+    margin-right: 1;
+  }
 }
 .navbar .navbar__menu > li:hover > a, .navbar .navbar__menu > li:hover > span[aria-haspopup=true] {
   color: var(--link-color-hover);
@@ -917,7 +996,7 @@ textarea {
 }
 .navbar .navbar__submenu li {
   font-size: 0.8888888889rem;
-  font-variation-settings: "wght" var(--font-weight-normal);
+  font-weight: var(--font-weight-normal);
   line-height: 1.5;
   padding: 0 0.25rem;
   text-transform: none;
@@ -1214,33 +1293,45 @@ textarea {
 }
 
 .grid {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: var(--page-margin) 0 1fr 0 1fr 0 minmax(0, var(--entry-width)) 0 1fr 0 1fr 0 var(--page-margin);
   grid-template-columns: var(--page-margin) 1fr 1fr minmax(0, var(--entry-width)) 1fr 1fr var(--page-margin);
   gap: var(--magic-number) 0;
 }
 @media all and (min-width: 56.25em) {
   .grid {
+    -ms-grid-columns: var(--page-margin) 1fr 1fr var(--entry-width) 1fr var(--page-alignment) var(--page-margin);
     grid-template-columns: var(--page-margin) 1fr 1fr var(--entry-width) 1fr var(--page-alignment) var(--page-margin);
   }
 }
 
 .subgrid {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 5;
   grid-column: 2/7;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 1fr minmax(0, var(--entry-width)) 1fr 1fr;
   grid-template-columns: 1fr 1fr minmax(0, var(--entry-width)) 1fr 1fr;
 }
 @media all and (min-width: 56.25em) {
   .subgrid {
+    -ms-grid-columns: 1fr 0 1fr 0 calc(var(--entry-width) / 2) 0 calc(var(--entry-width) / 2) 0 1fr 0 var(--page-alignment);
     grid-template-columns: 1fr 1fr calc(var(--entry-width) / 2) calc(var(--entry-width) / 2) 1fr var(--page-alignment);
     gap: var(--magic-number) 0;
   }
 }
 
 main {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 7;
   grid-column: 1/8;
 }
 
 .hero {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 2;
   grid-column: 3/5;
   margin-bottom: calc(1.5 * var(--magic-number));
 }
@@ -1253,7 +1344,7 @@ main {
   }
 }
 .hero h1 sup {
-  font-variation-settings: "wght" var(--font-weight-normal);
+  font-weight: var(--font-weight-normal);
   font-size: 1.125rem;
   vertical-align: top;
 }
@@ -1275,6 +1366,8 @@ main {
 }
 
 .l-grid {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 6;
   grid-column: 1/7;
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
@@ -1293,17 +1386,26 @@ main {
   margin: var(--cards-gap);
 }
 .l-grid--flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 .l-grid--flex-top {
-  align-items: start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
 }
 .l-grid--flex-center {
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .l-grid--flex-bottom {
-  align-items: end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
 }
 @media all and (min-width: 30em) {
   .l-grid--flex-2 .c-card {
@@ -1402,8 +1504,11 @@ main {
 }
 .c-card__meta {
   color: var(--gray);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   font-size: 0.7901234568rem;
   gap: 0 1rem;
   margin-top: 0.25rem;
@@ -1441,6 +1546,8 @@ main {
   color: var(--link-color);
 }
 .post > * {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 2;
   grid-column: 3/5;
 }
 .post__header + * {
@@ -1464,9 +1571,13 @@ main {
   padding-top: 1rem;
 }
 .post__featured-image--wide {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 4;
   grid-column: 2/6;
 }
 .post__featured-image--full {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 6;
   grid-column: 1/7;
 }
 .post--second__featured-image {
@@ -1491,6 +1602,7 @@ main {
 }
 @media all and (min-width: 37.5em) {
   .post__meta {
+    display: -ms-grid;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(20%, auto));
     gap: 1rem;
@@ -1508,7 +1620,7 @@ main {
   }
 }
 .post__author {
-  font-variation-settings: "wght" var(--font-weight-bold);
+  font-weight: var(--font-weight-bold);
 }
 .post__author > img {
   display: none;
@@ -1527,11 +1639,15 @@ main {
 }
 @media all and (min-width: 56.25em) {
   .post__image--left {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 1;
     grid-column: 3/4;
     margin-right: 1.75rem;
     margin-bottom: 0;
   }
   .post__image--left + * {
+    -ms-grid-column: 4;
+    -ms-grid-column-span: 1;
     grid-column: 4/5;
   }
 }
@@ -1543,6 +1659,8 @@ main {
 }
 .post__image--wide, .post__image--full {
   background-color: var(--lighter);
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 4;
   grid-column: 2/6;
   display: block;
 }
@@ -1559,6 +1677,8 @@ main {
   padding-top: 1rem;
 }
 .post__image--full {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 6;
   grid-column: 1/7;
   text-align: center;
 }
@@ -1611,26 +1731,33 @@ main {
 .post__toc ul {
   counter-reset: item;
   list-style: decimal;
-  margin: 0 0 0 2ch;
+  margin: 0;
+  padding: 0 0 0 1.25rem;
 }
 .post__toc ul li {
   counter-increment: item;
-  padding: 0;
+  padding: 0 0 0 0.5rem;
 }
 .post__toc ul ul {
   margin-top: 0;
+  padding: 0 0 0 0.5rem;
 }
 .post__toc ul ul li {
   display: block;
 }
 .post__toc ul ul li:before {
   content: counters(item, ".") ". ";
-  margin-left: -2ch;
+  margin-left: -1rem;
+  margin-right: 0.25rem;
 }
 .post__tag-share {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 1rem;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .post__tag {
   font-size: 0.8888888889rem;
@@ -1652,19 +1779,21 @@ main {
   padding: 0;
 }
 .post__share {
-  flex: 0 0 auto;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
   font-size: 1rem;
   margin-left: -1rem;
   position: relative;
 }
-.post__share > a {
+.post__share a {
   display: inline-block;
   margin: 0 0 0 1rem;
 }
-.post__share > a:hover {
+.post__share a:hover {
   text-decoration: none;
 }
-.post__share > a svg {
+.post__share a svg {
   fill: var(--dark);
   height: 0.9rem;
   pointer-events: none;
@@ -1676,10 +1805,14 @@ main {
   margin-top: var(--magic-number);
 }
 .post__nav {
+  -ms-grid-column: 2 !important;
+  -ms-grid-column-span: 5 !important;
   grid-column: 2/7 !important;
 }
 .post__related {
   background-color: var(--lighter);
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 5;
   grid-column: 2/7;
   margin-top: var(--magic-number);
   padding: var(--magic-number);
@@ -1698,23 +1831,35 @@ main {
   margin: calc(var(--cards-gap) / 2) 0 var(--magic-number) 0;
 }
 .post__comments {
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 1;
   grid-column: 4/5;
 }
 
 .banner {
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 1;
   grid-column: 4/5;
 }
 .banner--wide {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 3;
   grid-column: 3/6;
 }
 .banner--full {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 5;
   grid-column: 2/7;
 }
 .page__content {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 2;
   grid-column: 3/5;
 }
 @media all and (min-width: 37.5em) {
   .page--author__box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
 }
@@ -1754,16 +1899,22 @@ main {
 }
 @media all and (min-width: 37.5em) {
   .page--author-centered .page--author__box {
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
 }
 .page--author-centered .page--author__avatar {
   margin: auto;
 }
 .page--search form {
-  align-items: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 @media all and (max-width: 37.4375em) {
   .page--search input {
@@ -1772,7 +1923,9 @@ main {
 }
 @media all and (min-width: 20em) {
   .page--search input {
-    flex: 1 0 auto;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 auto;
+            flex: 1 0 auto;
     margin-right: 0.5rem;
   }
 }
@@ -1783,11 +1936,15 @@ main {
 }
 
 .tags-list {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 3;
   grid-column: 3/6;
   list-style: none;
   margin: 0;
 }
 .tags-list--centered {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 4;
   grid-column: 2/6;
 }
 .tags-list__item {
@@ -1858,12 +2015,16 @@ main {
   width: 100%;
 }
 .pec-overlay {
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: var(--lighter);
   font-size: 14px;
   display: none;
   height: inherit;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   line-height: 1.4;
   padding: 1rem;
   position: relative;
@@ -1877,6 +2038,8 @@ main {
   }
 }
 .pec-overlay.is-active {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 .pec-overlay-inner p {
@@ -1928,54 +2091,16 @@ main {
             mask-size: 50px 18px;
   }
 }
-.facebook:hover svg {
-  fill: #0866FF;
-}
-
-.twitter:hover svg {
-  fill: #000000;
-}
-
-.mix:hover svg {
-  fill: #fd8235;
-}
-
-.instagram:hover svg {
-  fill: #000000;
-}
-
-.vimeo:hover svg {
-  fill: #1ab7ea;
-}
-
-.pinterest:hover svg {
-  fill: #bd081c;
-}
-
-.youtube:hover svg {
-  fill: #cd201f;
-}
-
-.linkedin:hover svg {
-  fill: #007bb6;
-}
-
-.buffer:hover svg {
-  fill: #333333;
-}
-
-.whatsapp:hover svg {
-  fill: #25D366;
-}
-
-.pocket:hover svg {
-  fill: #ED4255;
-}
-
 .pagination {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 6;
   grid-column: 1/7;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-top: var(--magic-number);
 }
 .pagination svg {
@@ -2018,6 +2143,8 @@ main {
 }
 
 .newsletter {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 5;
   grid-column: 2/7;
   border: 1px solid var(--dark);
   margin: calc(var(--magic-number) / 2) 0 0;
@@ -2025,6 +2152,8 @@ main {
 }
 @media all and (min-width: 56.25em) {
   .newsletter {
+    -ms-grid-column: 4;
+    -ms-grid-column-span: 1;
     grid-column: 4/5;
   }
 }
@@ -2042,20 +2171,31 @@ main {
   }
 }
 .newsletter form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 1rem;
   margin-top: 1.75rem;
 }
 @media all and (min-width: 37.5em) {
   .newsletter form {
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
 }
 .newsletter input[type=text],
 .newsletter input[type=email] {
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   border: none;
   border-radius: 0;
   border-bottom: 1px solid var(--dark);
@@ -2068,6 +2208,8 @@ main {
 }
 
 .footer {
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 1;
   grid-column: 4/5;
   font-family: var(--font-heading);
   margin: calc(2 * var(--magic-number)) 0 var(--magic-number);
@@ -2112,12 +2254,16 @@ main {
   margin: 2.25rem 0;
 }
 .gallery-wrapper--wide {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 4;
   grid-column: 2/6;
 }
 .gallery-wrapper--wide .gallery {
   width: 100%;
 }
 .gallery-wrapper--full {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 6;
   grid-column: 1/7;
 }
 .gallery[data-columns="1"] .gallery__item {
